--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ keywords = ["neonize", "whatsapp", "framework", "websocket", "bot"]
 [tool.poetry.dependencies]
 python = "^3.11"
 neonize = "^0.3.1"
-pytube = "^15.0.0"
+pytubefix = "^8.3.2"
 langchain = "^0.1.11"
 tomli-w = "^1.0.0"
 langchain-openai = "^0.0.8"
